--- a/makeopts.in
+++ b/makeopts.in
@@ -106,7 +106,7 @@ INC = -I$(BUILDDIR)/include -I$(BUILDDIR)/extra/include -I$(BUILDDIR)/include/gu
 CFLAGS   = @CFLAGS@  $(CPPFLAGS) $(DEF) $(INC)
 CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
 # for the python code:
-CXXFLAGS_PYCODE = @CXXFLAGS_PYCODE@ $(CPPFLAGS) $(DEF) $(INC)
+CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
 LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS)
