--- a/makeopts.in
+++ b/makeopts.in
@@ -27,11 +27,12 @@ ODIR=.
 @MAKE_LIBTOOL@
 @MAKE_USE_MODULES@
 @MAKE_USE_LEAKTRACER@
+@MAKE_PISOCKLIB@
 
 # libraries needed by the modules, linked against individually in the modules
 # directory, but listed here in case we build a static library:
 ifeq ($(USE_MODULES),static)
-MODULES_LIBS=-lpisock
+MODULES_LIBS=$PISOCK_LIB
 else
 MODULES_LIBS=
 endif
