--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ DEFAULT_USE_EXPERIMENTAL=0
 DEFAULT_USE_WXCONFIG=1
 DEFAULT_USE_LIBTOOL=0
 DEFAULT_USE_DOCXX=0
-DEFAULT_USE_MODULES=static
+DEFAULT_USE_MODULES=1
 DEFAULT_USE_LEAKTRACER=0
 DEFAULT_USE_STRICT=0
 
@@ -662,7 +662,7 @@ if test "x$USE_MODULES" != "x"; then
        MAKE_USE_MODULES="USE_MODULES=dynamic"
        AC_DEFINE(USE_MODULES)
        ;;
-     static|Static|STATIC)
+     static|Static|STATIC|1)
        USE_MODULES=1
        USE_MODULES_STATIC=1
        MAKE_USE_MODULES="USE_MODULES=static"
