--- a/makeopts.in
+++ b/makeopts.in
@@ -12,6 +12,7 @@ CCLIENTDIR=$(BUILDDIR)/extra/src/c-client
 CCLIENTINCLUDE=$(CCLIENTDIR)
 CCLIENTLIB=$(CCLIENTDIR)/c-client.a
 CCLIENTOSTYPE=@CCOSTYPE@
+CCLIENT_EXTRAAUTHENTICATORS=@CCLIENT_EXTRAAUTHENTICATORS@
 
 # where we have the Icon xpms:
 ICONDIR=$(BUILDDIR)/src/icons
