--- a/include/config.h.in
+++ b/include/config.h.in
@@ -121,6 +121,9 @@
 /** Define this if you want to use RBL to lookup SPAM domains. */
 #undef USE_RBL
 
+/** Define this if you want to compile in SSL support. */
+#undef USE_SSL
+
 /** Define this if you have POSIX.2 regexp suport. */
 #undef HAVE_POSIX_REGEX
 
