IMAP 4.7a added and SSL support

--- a/makeopts.in
+++ b/makeopts.in
@@ -13,6 +13,9 @@ CCLIENTINCLUDE=$(CCLIENTDIR)
 CCLIENTLIB=$(CCLIENTDIR)/c-client.a
 CCLIENTOSTYPE=@CCOSTYPE@
 CCLIENT_EXTRAAUTHENTICATORS=@CCLIENT_EXTRAAUTHENTICATORS@
+CCLIENT_EXTRACFLAGS=@CCLIENT_EXTRACFLAGS@
+
+SSL_LIBS=@SSL_LIBS@
 
 # where we have the Icon xpms:
 ICONDIR=$(BUILDDIR)/src/icons
@@ -111,7 +114,7 @@ CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
 CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
-LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS)
-LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB) $(MODULES_LIBS)
+LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS)
+LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS)
 GUI_LIBS=@GTK_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
