--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,10 @@ DEFAULT_USE_DOCXX=0
 DEFAULT_USE_MODULES=1
 DEFAULT_USE_LEAKTRACER=0
 DEFAULT_USE_STRICT=0
+DEFAULT_USE_SSL=0
+DEFAULT_NODSA=0
+DEFAULT_NOIDEA=1	# illegal to use in most of Europe due to ASCOM patent
+DEFAULT_NORSA=0
 
 M_OVERRIDES(python,python,
 --with-python   use python scripting,
@@ -112,6 +116,18 @@ USE_DOCXX)
 M_OVERRIDES(ssl,ssl,
 --with-ssl      compile in SSL support (requires openSSL),
 USE_SSL)
+
+M_OVERRIDES(no_dsa,no_dsa,
+--with-no_dsa      use SSL without DSA,
+USE_NO_DSA)
+
+M_OVERRIDES(no_idea,no_idea,
+--with-no_idea      use SSL without IDEA,
+USE_NO_IDEA)
+
+M_OVERRIDES(no_rsa,no_rsa,
+--with-no_rsa      use SSL without RSA,
+USE_NO_RSA)
 
 M_OVERRIDES_DONE
 
@@ -377,17 +393,37 @@ fi
 dnl Use SSL (requires openSSL)
 MAKE_USESSL=
 CCLIENT_EXTRAAUTHENTICATORS=
+CCLIENT_EXTRACFLAGS=
+EXTRACFLAGS=
 if test "$USE_SSL" = 1; then
 	AC_CHECK_LIB(crypto,CRYPTO_free,
-	[ LIBS="$LIBS -lcrypto"	AC_CHECK_LIB(ssl,ssl3_connect,
-	[ 	MAKE_USESSL="USESSL=yes"
-		AC_DEFINE(USE_SSL)
-		CCLIENT_EXTRAAUTHENTICATORS="\"EXTRAAUTHENTICATORS=ssl\""
-	] ,AC_MSG_ERROR("Cannot find openSSL library libssl."), -lcrypto) ],
+		AC_CHECK_LIB(ssl,ssl3_connect,
+		[ 	MAKE_USESSL="USESSL=yes"
+			AC_DEFINE(USE_SSL)
+			SSL_LIBS="-lssl -lcrypto"
+			CCLIENT_EXTRAAUTHENTICATORS="\"EXTRAAUTHENTICATORS=ssl\""
+		] ,AC_MSG_ERROR("Cannot find openSSL library libssl."), -lcrypto) ,
 	AC_MSG_ERROR("Cannot find openSSL library libcrypto."))
+
+	if test "$USE_NO_IDEA" = 1; then
+		EXTRACFLAGS="$EXTRACFLAGS -DNO_IDEA"
+		CPPFLAGS="$CPPFLAGS -DNO_IDEA"
+	fi
+
+	if test "$USE_NO_DSA" = 1; then
+		EXTRACFLAGS="$EXTRACFLAGS -DNO_DSA"
+		CPPFLAGS="$CPPFLAGS -DNO_DSA"
+	fi
+	if test "$USE_NO_RSA" = 1; then
+		EXTRACFLAGS="$EXTRACFLAGS -DNO_RSA"
+		CPPFLAGS="$CPPFLAGS -DNO_RSA"
+	fi
+	CCLIENT_EXTRACFLAGS="\"EXTRACFLAGS=$EXTRACFLAGS\""
 fi
 AC_SUBST(MAKE_USESSL)
 AC_SUBST(CCLIENT_EXTRAAUTHENTICATORS)
+AC_SUBST(CCLIENT_EXTRACFLAGS)
+AC_SUBST(SSL_LIBS)
 
 dnl kdoc/docxx have their own section further down
 
