--- a/include/config.h.in
+++ b/include/config.h.in
@@ -124,6 +124,15 @@
 /** Define this if you want to compile in SSL support. */
 #undef USE_SSL
 
+/** Define this if you want to compile in SSL support without DSA. */
+#undef USE_NO_DSA
+
+/** Define this if you want to compile in SSL support without IDEA. */
+#undef USE_NO_IDEA
+
+/** Define this if you want to compile in SSL support without RSA. */
+#undef USE_NO_RSA
+
 /** Define this if you have POSIX.2 regexp suport. */
 #undef HAVE_POSIX_REGEX
 
