Fruitless attempts to fix word wrapping. Improvements to startup splash.

--- a/configure.in
+++ b/configure.in
@@ -803,7 +803,7 @@ then
 fi
 
 dnl add other flags
-LIBS="$LIBS $PYTHON_LIBS $LIB_EFENCE $LIB_DMALLOC $LIB_PNG $LIB_JPEG"
+LIBS="$LIBS $PYTHON_LIBS $LIB_PNG $LIB_JPEG $LIB_EFENCE $LIB_DMALLOC"
 CXXFLAGS="$CXXFLAGS $DBGFLAGS $OPT"
 CFLAGS="$CFLAGS $DBGFLAGS $OPT"
 
