--- a/makeopts.in
+++ b/makeopts.in
@@ -114,7 +114,7 @@ CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
 CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
-LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS)
-LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS)
+LIBS=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) @LIBS@ 
+LIBS_STATIC=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) @LIBS_STATIC@ 
 GUI_LIBS=@GTK_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
