Added ProvPalm.cpp for compiling.

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -3,7 +3,7 @@
 CWD = adb
 SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       AdbDialogs.cpp \
-      ProvFC.cpp ProvBbdb.cpp \
+      ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
       AdbImport.cpp AdbExport.cpp \
       ImportText.cpp ImportXFMail.cpp ImportMailrc.cpp ImportPine.cpp \
       ExportPalm.cpp ExportText.cpp 
