c-client make changed

--- a/extra/Makefile
+++ b/extra/Makefile
@@ -4,22 +4,24 @@
 
 
 CWD = extra
-SUB_DIRS = src/c-client src/compface
+SUB_DIRS = src/compface
 
 include ../makeopts
 
 
 all: 
 	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i $@; done
-
+	set -e; $(MAKE) -C src/c-client -f Makefile.M
 doc:
 
 clean:
 	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i $@; done
+	set -e; $(MAKE) -C src/c-client -f Makefile.M $@
 	$(RM) core
 
 dep depend: 
 	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i $@; done
+	set -e; $(MAKE) -C src/c-client -f Makefile.M $@
 
 install: 
 	$(MAKE) -C install install
