--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: mahogany
 Section: unknown
 Priority: optional
-Maintainer: Karsten Ballüder <karsten@phy.hw.ac.uk>
+Maintainer: Karsten Ballüder <ballueder@gmx.net>
 Standards-Version: 2.5.0
 
 Package: mahogany
