--- a/configure.in
+++ b/configure.in
@@ -722,12 +722,31 @@ if test "x$USE_MODULES" != "x"; then
        MAKE_USE_MODULES="USE_MODULES=static"
        AC_DEFINE(USE_MODULES_STATIC)
        AC_DEFINE(USE_MODULES)
-       ;;
+	;;
+     auto|Auto|AUTO)
+	USE_MODULES=1
+	dnl check for wxGTK dynamic linkage?
+	echo "main() { return 0; }" >conftest.c
+	$CXX -o conftest conftest.c `wx-config --libs` && \
+	ldd conftest | fgrep -q libwx 
+	if test $? = 0
+	then
+		MAKE_USE_MODULES="USE_MODULES=dynamic"
+	else
+ 		USE_MODULES_STATIC=1
+	       	MAKE_USE_MODULES="USE_MODULES=static"
+	       	AC_DEFINE(USE_MODULES_STATIC)
+	       	AC_DEFINE(USE_MODULES)
+	fi
+	rm -f conftest
+	AC_DEFINE(USE_MODULES)
+	;;
      *)
        AC_MSG_ERROR(Set --with-modules= to either static/dynamic/none!)
   esac
  fi
 AC_SUBST(MAKE_USE_MODULES)
+
 
 dnl --------------------------------------------------------------------------
 dnl set up generators for class documentation
