--- a/debian/rules
+++ b/debian/rules
@@ -16,13 +16,14 @@ build:
 	fi
 	make depend || true
 	make doc
-	$(MAKE) all CFLAGS="-O2 -g -Wall"
 	# If we are on Debian Slink, we need to build a semistatic binary:
 	if test "`cat /etc/debian_version`" = "2.1" ; \
 	then \
-		( cd src && make semistatic ) \
+		( $(MAKE) all CFLAGS="-O2 -g -Wall" || true; \
+		cd src && make semistatic ) \
 	else \
-		( cd src && make ) \
+		( $(MAKE) all CFLAGS="-O2 -g -Wall" ; \
+		cd src && make ) \
 	fi
 	touch build
 
