minor change to MModule ctor to simply modularizing existing code (added SetMInterface)

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -7,7 +7,7 @@ SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       AdbImport.cpp AdbExport.cpp \
       ExportPalm.cpp ExportText.cpp
 
-#MOD = ImportText.cpp
+#MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
 MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
 
 ifdef DEBUG
