1. fixed crashes when auto mail collect is off 2. started implementing "browse subfolders" for the root folder 3. separated MH support in its own file

--- a/src/mail/Makefile
+++ b/src/mail/Makefile
@@ -1,7 +1,8 @@
 # Makefile for src/mail directory
 
 CWD = mail 
-SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp SendMessageCC.cpp ASMailFolder.cpp
+SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp \
+SendMessageCC.cpp ASMailFolder.cpp MailMH.cpp
 
 include ../../makeopts
 
