1. added -lswig -lswigpy to makeopts.in - am I the only one who needs them? 2. fixed MailFolder.i compilation problem

--- a/makeopts.in
+++ b/makeopts.in
@@ -74,10 +74,12 @@ ifdef USE_SWIG
 SWIG = @SWIG@
 SWIGFLAGS = -c++ -python -shadow -dhtml -c
 SWIGFLAGS_LIBSWIG = -c++ -python -shadow 
+SWIG_LIBS = -lswig -lswigpy
 else
 SWIG= echo
 SWIGFLAGS=
 SWIGFLAGS_LIBSWIG=
+SWIG_LIBS=
 endif
 
 # other stuff
@@ -115,7 +117,7 @@ CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
 CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
-LIBS=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) @LIBS@ 
-LIBS_STATIC=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) @LIBS_STATIC@ 
+LIBS=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) $(SWIG_LIBS) @LIBS@ 
+LIBS_STATIC=$(CCLIENTLIB) $(MODULES_LIBS) $(SSL_LIBS) $(SWIG_LIBS) @LIBS_STATIC@ 
 GUI_LIBS=@GTK_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
