--- a/makeopts.in
+++ b/makeopts.in
@@ -32,6 +32,11 @@ ODIR=.
 @MAKE_USE_MODULES@
 @MAKE_USE_LEAKTRACER@
 @MAKE_PISOCKLIB@
+@MAKE_HAVE_LIBMAL@
+
+ifdef HAVE_LIBMAL
+LIBMAL_DIR=$(BUILDDIR)/extra/src/libmal
+endif
 
 # libraries needed by the modules, linked against individually in the modules
 # directory, but listed here in case we build a static library:
