--- a/makeopts.in
+++ b/makeopts.in
@@ -73,6 +73,9 @@ CXX = @CXX@
 LIBTOOL = @LIBTOOL@
 CXXCPP = @CXXCPP@
 CPPFLAGS =@CPPFLAGS@
+AR = ar
+RANLIB = @RANLIB@
+YACC = @YACC@
 
 # SWIG
 ifdef USE_SWIG
